--- a/merit/templates/edit.html
+++ b/merit/templates/edit.html
@@ -7,9 +7,43 @@
 
 {% block body %}
 <body style="font-family: sans-serif; margin: 10px;">
-<h1>Edit</h1>
-<form>
-    
+    <header>
+        <div class="jumbotron bg-dark text-white" style="padding: 40px;">
+            <div class="container">
+                <h1 class="display-4" style="font-weight: 900; text-align: center;">Edit</h1>
+            </div>
+        </div>
+    </header>
+<form action="/add" method="post">
+    <h1>Add a student</h1>
+    <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" name="name" placeholder="Enter name">
+    </div>
+    <div class="form-group">
+        <label for="age">Age</label>
+        <input type="number" class="form-control" name="age" placeholder="Enter age">
+    </div>
+    <div class="form-group">
+        <label for="points">Points</label>
+        <input type="number" class="form-control" name="points" placeholder="Enter points">
+    </div>
+    <input type="hidden" name="house" id="house" value="{{ x }}">
+    <button type="submit" class="btn btn-dark">Add</button>
+</form>
+<hr>
+<form action="/change" method="post">
+    <h1>Change a student's points</h1>
+    <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" name="name" placeholder="Enter name">
+    </div>
+    <div class="form-group">
+        <label for="points">Points</label>
+        <input type="number" class="form-control" name="points" placeholder="What's the new points of the person">
+    </div>
+    <input type="hidden" name="house" id="house" value="{{ x }}">
+    <button type="submit" class="btn btn-dark">Change</button>
 </form>
 </body>
 {% endblock %}
